@@ -1,3 +1,15 @@
+2003-10-21  Jakub Steiner <jimmac@ximian.com>
+
+	* 16x16/stock/media/stock_media-stop.png
+	* 16x16/stock/media/stock_media-rew.png
+	* 16x16/stock/media/stock_media-rec.png
+	* 16x16/stock/media/stock_media-prev.png
+	* 16x16/stock/media/stock_media-play.png
+	* 16x16/stock/media/stock_media-pause.png
+	* 16x16/stock/media/stock_media-next.png
+	* 16x16/stock/media/stock_media-fwd.png
+	* 16x16/stock/media/Makefile.am: media icons in menu size
+
 === gnome-icon-theme 1.1.0 ===
 	
 2003-10-20  Alexander Larsson  <alexl@redhat.com>
